# pycoupler

./: .flake8  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: check.yml  release.yml
docs/source/: conf.py  index.rst
hooks/: pre-tag
pycoupler/: __init__.py  config.py  coupler.py  data.py  data_info.py  release.py  run.py  utils.py
scripts/: demo_config_run.py  demo_config_submit.py  demo_coupling2.py  release.sh  update_citation.py
tests/: conftest.py  test_config.py  test_couple.py  test_data.py  test_release.py  test_run.py  test_utils.py
tests/data/: config.yaml  config_coupled_test.json  lpjml_config.json  test_receive.txt
tests/data/input/: coord_netherlands.clm  soil_netherlands.clm  with_tillage.nc  with_tillage.nc.json
tests/data/output/coupled_test/: cftfrac.nc4.json  country.nc4.json  grid.nc4  grid.nc4.json  hdate.nc4.json  inseeds_data.csv  pft_harvestc.nc4.json  region.nc4.json  soilc_agr_layer.nc4.json  terr_area.bin.json  terr_area.nc4.json
